--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                     2023 YHack Best AI
                 </li>
 	    </ul>
+	</br>
 	    <p>Clubs and Activities</p>
 	    <ul>
                 <li>
@@ -219,7 +220,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/mapp.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -238,7 +239,7 @@ When a user runs the Family Map client app, they login and the client app retrie
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/nunez_car.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -258,7 +259,7 @@ project.
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/viz_ava.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -275,7 +276,7 @@ In addition to providing advanced analytics and feedback, A.V.A. visualizes driv
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/elvis_face.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -293,7 +294,7 @@ and gender with OpenCV, and then tell a story about you and your celebrity twin 
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/datalog_computer.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
