--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ In addition to providing advanced analytics and feedback, A.V.A. visualizes driv
                     <div class="project-info">
                         <h3>Celebrity Lookalike</h3>
                         <p>
-I built this program with Jeff Hansen and Benjamin McMullion over the course of 24 hours for the 
+I built this program with Jeff Hansen and Benjamin McMullin over the course of 24 hours for the 
 2023 YHack competition where we won the award for Best AI. This project uses OpenCV to detect faces, compare them to a database of faces of celebrities we scraped from the internet, estimate your age 
 and gender with OpenCV, and then tell a story about you and your celebrity twin uses GPT-3.
                         </p>
