fix image names

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ project.
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/viz_ava.jpg" />
+                        <img src="images/viz_ava.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -294,7 +294,7 @@ and gender with OpenCV, and then tell a story about you and your celebrity twin 
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/datalog_computer.jpg" />
+                        <img src="images/datalog_computer.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
