change image names again

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/mapp.jpg" />
+                        <img src="images/mapp1.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -239,7 +239,7 @@ When a user runs the Family Map client app, they login and the client app retrie
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/nunez_car.jpg" />
+                        <img src="images/nunez_car1.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -259,7 +259,7 @@ project.
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/viz_ava.png" />
+                        <img src="images/viz_ava1.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -276,7 +276,7 @@ In addition to providing advanced analytics and feedback, A.V.A. visualizes driv
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/elvis_face.jpg" />
+                        <img src="images/elvis_face1.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -294,7 +294,7 @@ and gender with OpenCV, and then tell a story about you and your celebrity twin 
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/datalog_computer.png" />
+                        <img src="images/datalog_computer1.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
