--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/mapp1.jpg" />
+                        <img src="images/mapp2.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
