add linkedin thing

--- a/index.html
+++ b/index.html
@@ -387,9 +387,15 @@ Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relatio
                             <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
                         </li>
 -->
+<!-- Temporarily hide linkedin and show other
                         <li>
                             <a href="https://www.linkedin.com/in/dallinstewart/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
+-->
+			<li>
+			    <div class="badge-base LI-profile-badge" data-locale="en_US" data-				size="medium" data-theme="light" data-type="VERTICAL" data-				vanity="dallinstewart" data-version="v1"><a class="badge-base__link 				LI-simple-link" href="https://www.linkedin.com/in/dallinstewart?				trk=profile-badge">Dallin Stewart</a></div>
+			</li>
+              
 <!-- Hidden Icons
                         <li>
                             <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -410,6 +416,7 @@ Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relatio
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/scripts.min.js"></script>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer 	type="text/javascript"></script>
 </body>
 
 </html>
