--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
             <li>
                 <a href="#experience">Experience</a>
             </li>
-            <li>
+            <!--<li>
                 <a href="#education">Education</a>
-            </li>
+            </li>-->
             <li>
                 <a href="#projects">Projects</a>
             </li>
-            <li>
+            <!--<li>
                 <a href="#skills">Skills</a>
+            </li>-->
+            <li>
+                <a href="blog/welcome.html">Blog</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
