add profile image

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 class="heading">About Me</h2>
+		    <div class="project-image">
+                        <img src="images/dallinstewart.jpg" />
+                    </div>
                 </div>
                 <div class="col-md-8">
                     <p>
