add profile image

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="col-md-4">
                     <h2 class="heading">About Me</h2>
 		    <div class="project-image">
-                        <img src="images/dallinstewart.jpg" />
+                        <img src="images/dallinstewart.JPG" />
                     </div>
                 </div>
                 <div class="col-md-8">
