--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="#skills">Skills</a>
             </li>-->
             <li>
-                <a href="https://dallinstewart.com/blog/welcome.html">Blog</a>
+                <a href="/blog/welcome.html">Blog</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -74,7 +74,7 @@
                 <div class="col-md-4">
                     <h2 class="heading">About Me</h2>
 		    <div class="project-image">
-                        <img src="images/dallinstewart.JPG" />
+                        <img src="images/dallinstewart.jpg" />
                     </div>
                 </div>
                 <div class="col-md-8">
