Fix blog button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="#skills">Skills</a>
             </li>-->
             <li>
-                <a href="/blog/welcome.html">Blog</a>
+                <a class="no-scroll" href="/blog/welcome.html">Blog</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
