add lila project

--- a/index.html
+++ b/index.html
@@ -254,10 +254,31 @@ When a user runs the Family Map client app, they login and the client app retrie
 This project, affectionately named Casper, is a python program that uses selenium to gather used car 
 sales data online from local retailers including AutoTrader, CarsDirect, CarGuru, Carvana, Lowbook, 
 and KSL. As of the most recent update, Casper only searches for cars in the Provo, Utah area. After 
-gathering data, Casper scores each car on how good of a deal the sale is and generates a CSV report of the current market in addition to the market history since November 2022 when I first began the 
+gathering data, Casper scores each car on how good of a deal the sale is and generates a CSV report 
+of the current market in addition to the market history since November 2022 when I first began the 
 project.
                         </p>
                         <a href="https://github.com/binDebug3/Casper">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/lila_3.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Virtual Assistant</h3>
+                        <p>
+The Language Interpretation and Learning Assistant (Lila) is a customized virtual assistant built to 
+automate repetitive tasks through natural language commands. Lila is capable of providing information 
+about the user's computer and relevant to their location, as well as interacting with files and 
+folders on the computer. Lila can also use APIs and the internet to perform searches, answer 
+questions, and interact with google apps. 
+                        </p>
+                        <a href="https://github.com/binDebug3/VirtualAssistant">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
