add lila project

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ project.
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/lila_3.jpg" />
+                        <img src="images/lila_3.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
