add lila project

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                     Full BYU Academic Scholarship
                 </li>
                 <li>
-                    Math Department Dean's List 2022
+                    Math Department Dean's List
                 </li>
 		<li>
                     2023 YHack Best AI
@@ -212,7 +212,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
             <span class="education-date">Sept 2014 - May 2018</span>
             <h4>Graduated with Honors</h4>
             <p>
-                In high school, I participated in Track and Cross Country, Leadership, and the Robotics Club and earned a 4.23 GPA.
+                I participated in Track and Cross Country, Leadership, and the Robotics Club and earned a 4.23 GPA.
             </p>
         </div>
         <!-- End .education-block -->
