include blog more

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="#skills">Skills</a>
             </li>-->
             <li>
-                <a class="no-scroll" href="/blog/welcome.html">Blog</a>
+                <a class="no-scroll" href="/blog/mathbytes.html">Blog</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-I am a junior in the Applied and Computational Math Emphasis (ACME) at Brigham Young University. I love to use computer science and math to understand the world around me, make predictions, and solve problems. In my free time I enjoy playing ultimate frisbee and all kinds of board games. </br></br>
+I am a senior in the Applied and Computational Math Emphasis (ACME) at Brigham Young University. I love to use computer science and math to understand the world around me, make predictions, and solve problems. In my free time I enjoy playing ultimate frisbee and all kinds of board games. </br></br>
 
 I started my college education as an electrical engineer. 
             While I enjoyed my classes, I started to learn more about the possibilities
@@ -110,15 +110,15 @@ ACME is a unique and intensive intersection of advanced mathematics,
                 <h3>Ericsson</h3>
                 <h4>Industry 4.0 Intern</h4>
                 <p>
-Ericsson is one of the leading providers of Information and Communication Technology (ICT), developing technology and services that are easy to use, adopt, and scale. I am excited to contribute to Ericsson at their new Smart Factory in Dallas, Texas this summer.
+Ericsson is one of the leading providers of Information and Communication Technology (ICT), developing technology and services that are easy to use, adopt, and scale. I am excited to contribute to Ericsson at their new Smart Factory in Dallas, Texas in June
                 </p>
             </div>
 
-            <div data-date="January 2021 – Present">
+            <div data-date="January 2022 – April 2023">
                 <h3>BYU Math Department</h3>
                 <h4>Research Assistant</h4>
                 <p>
-I constructed and applied prior distributions for landslide parameters with bayesian statistics and Gaussian Mixture modeling to determine the source of the 1860 Indonesia tsunami with limited and uncertain data.
+I constructed and applied prior distributions for landslide parameters with bayesian statistics and Gaussian Mixture modeling to determine the source of the 1860 Indonesia tsunami with limited and uncertain data
                 </p>
             </div>
 
@@ -127,8 +127,8 @@ I constructed and applied prior distributions for landslide parameters with baye
                 <h4>Intern Analyst</h4>
                 <p>
 Analyzed several algorithms to optimize entity-matching for financed emission calculation</br>
-Improved the tactical approach of the Climate Initiative Analytics team with a Levenshtein distance algorithm</br>
-Taught and presented on entity matching techniques to the data analytics community at Wells Fargo
+Improved the tactical approach of the Climate Initiative Analytics team with a matching algorithm</br>
+Taught and presented on entity matching to the data analytics community at Wells Fargo
                 </p>
             </div>
 
@@ -146,7 +146,7 @@ Uploaded documents and performed corresponding data entry thoroughly and efficie
                 <h4>Program Director</h4>
                 <p>
 Developed a CMS software to refer over 50 leads per day from Facebook to local representatives</br>
-Executed a $30,000 annual marketing strategy across 10 Facebook pages to improve lead conversion</br>
+Executed a $30,000 annual marketing strategy across 10 Facebook pages to improve conversion</br>
 Implemented a prescriptive dashboard with KPIs for lead conversions</br>
 Designed and published a website called azldschurches.org</br>
 Performed weekly individual and group training to improve client relationships and performance</br>
@@ -197,10 +197,10 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
 	    <p>Clubs and Activities</p>
 	    <ul>
                 <li>
-                    Electronics Engineer for the BYU Racing Club
+                    Data Analyst for the <a href="https://www.linkedin.com/company/byu-racing/">BYU Racing Club</a>
                 </li>
                 <li>
-                    Vice President of Events for the BYU Data Science Club
+                    Vice President of Events for the <a href="https://www.instagram.com/byudatascience/">BYU Data Science Club</a>
                 </li>
             </ul>
         </div>
@@ -224,6 +224,23 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/math-blog2.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Math Bytes Blog</h3>
+                        <p>
+Have you ever wondered about the real-world applications of applied mathematics? Despite its vast potential, this discipline remains an enigma to most people. In an effort to demystify it and showcase its power, I've created a blog documenting my journey through the intricacies of math and computer science. In bite-sized posts, I share the exciting projects I've worked on and how they've expanded my understanding of this fascinating field. Whether you're a curious learner or an aspiring mathematician, my blog provides insights into the limitless possibilities of applied mathematics through my own learning journey. If you're interested, I invite you to explore the various projects that I have developed and the skills that I have gained.
+                        </p>
+                        <a href="/blog/mathbytes.html">Explore Math Bytes</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/mapp2.png" />
@@ -232,12 +249,12 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                     <div class="project-info">
                         <h3>Family Map App</h3>
                         <p>
-The Family Map app provides a geographical view of your family history. It offers a detailed view of  important events in your ancestors’ lives, by plotting their locations on a Google map.</br>
+The Family Map app provides a geographical view of your family history by plotting important events in your ancestors’ lives on a Google map.</br>
 
 This project uses a client/server architecture. The client is an Android app that lets a user view and interact with their family history data, and the server is a Java program that runs in the cloud. 
-When a user runs the Family Map client app, they login and the client app retrieves the user’s family history data from the server, which maintains accounts and dispenses family history data.
+When users login, the client app retrieves the user’s family history data from the server, which maintains accounts and dispenses family history data.
                         </p>
-                        <a href="https://github.com/binDebug3/FamilyMapApp">View Project</a>
+                        <a href="https://github.com/binDebug3/FamilyMapApp">View Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -258,7 +275,7 @@ gathering data, Casper scores each car on how good of a deal the sale is and gen
 of the current market in addition to the market history since November 2022 when I first began the 
 project.
                         </p>
-                        <a href="https://github.com/binDebug3/Casper">View Project</a>
+                        <a href="https://github.com/binDebug3/Casper">View Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -278,7 +295,7 @@ about the user's computer and relevant to their location, as well as interacting
 folders on the computer. Lila can also use APIs and the internet to perform searches, answer 
 questions, and interact with google apps. 
                         </p>
-                        <a href="https://github.com/binDebug3/VirtualAssistant">View Project</a>
+                        <a href="https://github.com/binDebug3/VirtualAssistant">View Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -292,10 +309,10 @@ questions, and interact with google apps.
                     <div class="project-info">
                         <h3>Vehicle Analytics Dashboard</h3>
                         <p>
-The Advanced Vehicle Analytics application (A.V.A.) for the 2023 BYU Formula E club is a dashboard that displays vehicle and driving data collected from an array of sensors designed to record everything from tire speed to steering wheel angle of an electric race car while driving.
+The Advanced Vehicle Analytics application (A.V.A.) for the 2023 BYU Formula E club is a dashboard that displays vehicle and driving data collected from an array of sensors that record everything from tire speed to steering wheel angle of an electric race car.
 In addition to providing advanced analytics and feedback, A.V.A. visualizes driving information in a format that makes it easy to understand and gain insight from the data. 
                         </p>
-                        <a href="https://github.com/davider3/FormulaE/tree/main/Visualization">View Project</a>
+                        <a href="https://github.com/davider3/FormulaE/tree/main/Visualization">View Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -313,7 +330,7 @@ I built this program with Jeff Hansen and Benjamin McMullin over the course of 2
 2023 YHack competition where we won the award for Best AI. This project uses OpenCV to detect faces, compare them to a database of faces of celebrities we scraped from the internet, estimate your age 
 and gender with OpenCV, and then tell a story about you and your celebrity twin uses GPT-3.
                         </p>
-                        <a href="https://github.com/binDebug3/your_identity">View Project</a>
+                        <a href="https://github.com/binDebug3/your_identity">View Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -329,7 +346,7 @@ and gender with OpenCV, and then tell a story about you and your celebrity twin 
                         <p>
 Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relational Database, Datalog interpreter and then optimized the rule evaluation that together compile Datalog code using discrete structures theory.
                         </p>
-                        <a href="https://github.com/binDebug3/Datalog-Compiler">View Project</a>
+                        <a href="https://github.com/binDebug3/Datalog-Compiler">View Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
