add blog intros

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                     <div class="project-info">
                         <h3>Math Bytes Blog</h3>
                         <p>
-Have you ever wondered about the real-world applications of applied mathematics? Despite its vast potential, this discipline remains an enigma to most people. In an effort to demystify it and showcase its power, I've created a blog documenting my journey through the intricacies of math and computer science. In bite-sized posts, I share the exciting projects I've worked on and how they've expanded my understanding of this fascinating field. Whether you're a curious learner or an aspiring mathematician, my blog provides insights into the limitless possibilities of applied mathematics through my own learning journey. If you're interested, I invite you to explore the various projects that I have developed and the skills that I have gained.
+Have you ever wondered about the real-world applications of applied mathematics? Despite its vast potential, this discipline remains an enigma to most people. In an effort to demystify it and showcase its power, I've created a blog documenting my journey through the intricacies of math and computer science. </br> Whether you're a curious learner or an aspiring mathematician, my blog provides insights into the limitless possibilities of applied mathematics and I'd love for you to check it out!
                         </p>
                         <a href="/blog/mathbytes.html">Explore Math Bytes</a>
                     </div>
