--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ gathering data, Casper scores each car on how good of a deal the sale is and gen
 of the current market in addition to the market history since November 2022 when I first began the 
 project.
                         </p>
-                        <a href="https://github.com/binDebug3/Casper">View Code</a>
+			<a href="https://dallinstewart.com/blog/webscraping.html">Learn More</a> | <a href="https://github.com/binDebug3/Casper">View Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
