--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
 
 
+
+
+
 <body>
     <div id="mobile-menu-open" class="shadow-large">
         <i class="fa fa-bars" aria-hidden="true"></i>
@@ -89,6 +92,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
     <!-- End #lead -->
 
+
+
+
+
+
+
+
+
     <div id="about">
         <div class="container">
             <div class="row">
@@ -121,6 +132,14 @@ ACME is a unique and intensive intersection of advanced mathematics,
         </div>
     </div>
     <!-- End #about -->
+
+
+
+
+
+
+
+
 
 
     <div id="experience" class="background-alt">
@@ -190,6 +209,15 @@ I was also in charge of evacuating over one hundred volunteers from Mexico in tw
     </div>
     <!-- End #experience -->
 
+
+
+
+
+
+
+
+
+
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
@@ -241,6 +269,14 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
     <!-- End #education -->
 
 
+
+
+
+
+
+
+
+
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
         <div class="container">
@@ -262,6 +298,8 @@ Have you ever wondered about the real-world applications of applied mathematics?
                 </div>
                 <!-- End .project -->
 
+
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/mapp2.png" />
@@ -281,6 +319,8 @@ When users login, the client app retrieves the user’s family history data from
                 </div>
                 <!-- End .project -->
 
+
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/nunez_car1.jpg" />
@@ -289,18 +329,16 @@ When users login, the client app retrieves the user’s family history data from
                     <div class="project-info">
                         <h3>Car Data Web Scraper</h3>
                         <p>
-This project, affectionately named Casper, is a python program that uses selenium to gather used car 
-sales data online from local retailers including AutoTrader, CarsDirect, CarGuru, Carvana, Lowbook, 
-and KSL. As of the most recent update, Casper only searches for cars in the Provo, Utah area. After 
-gathering data, Casper scores each car on how good of a deal the sale is and generates a CSV report 
-of the current market in addition to the market history since November 2022 when I first began the 
-project.
+This project, affectionately named Casper, is a python program that uses selenium to gather used car sales data online from local retailers including AutoTrader, CarsDirect, CarGuru, Carvana, Lowbook, and KSL. As of the most recent update, Casper only searches for cars in the Provo, Utah area. After 
+gathering data, Casper scores each car on how good of a deal the sale is and generates a CSV report of the current market in addition to the market history since November 2022 when I first began the project.
                         </p>
 			<a href="https://dallinstewart.com/blog/webscraping.html">Learn More</a> | <a href="https://github.com/binDebug3/Casper">View Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+
+
 
                 <div class="project shadow-large">
                     <div class="project-image">
@@ -322,6 +360,8 @@ questions, and interact with google apps.
                 </div>
                 <!-- End .project -->
 
+
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/viz_ava2.png" />
@@ -333,11 +373,13 @@ questions, and interact with google apps.
 The Advanced Vehicle Analytics application (A.V.A.) for the 2023 BYU Formula E club is a dashboard that displays vehicle and driving data collected from an array of sensors that record everything from tire speed to steering wheel angle of an electric race car.
 In addition to providing advanced analytics and feedback, A.V.A. visualizes driving information in a format that makes it easy to understand and gain insight from the data. 
                         </p>
-                        <a href="https://github.com/davider3/FormulaE/tree/main/Visualization">View Code</a>
+                        <a href="https://dallinstewart.com/blog/dashboard.html">Learn More</a> | <a href="https://github.com/davider3/FormulaE/tree/main/Visualization">View Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+
+
 
                 <div class="project shadow-large">
                     <div class="project-image">
@@ -351,11 +393,13 @@ I built this program with Jeff Hansen and Benjamin McMullin over the course of 2
 2023 YHack competition where we won the award for Best AI. This project uses OpenCV to detect faces, compare them to a database of faces of celebrities we scraped from the internet, estimate your age 
 and gender with OpenCV, and then tell a story about you and your celebrity twin uses GPT-3.
                         </p>
-                        <a href="https://github.com/binDebug3/your_identity">View Code</a>
+                        <a href="https://dallinstewart.com/blog/hackathon.html">Learn More</a> | <a href="https://github.com/binDebug3/your_identity">View Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+
+
 
                 <div class="project shadow-large">
                     <div class="project-image">
@@ -377,6 +421,13 @@ Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relatio
         </div>
     </div>
     <!-- End #projects -->
+
+
+
+
+
+
+
 
     <div id="skills">
         <h2 class="heading">Skills</h2>
@@ -415,6 +466,13 @@ Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relatio
     </div>
     <!-- End #skills -->
 
+
+
+
+
+
+
+
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
@@ -428,6 +486,12 @@ Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relatio
         <!-- End #contact-form -->
     </div>
     <!-- End #contact -->
+
+
+
+
+
+
 
     <footer>
         <div class="container">
@@ -479,6 +543,13 @@ Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relatio
     </footer>
     <!-- End footer -->
 
+
+
+
+
+
+
+
 <!-- LinkedIn thing, I think -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/scripts.min.js"></script>
@@ -486,6 +557,10 @@ Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relatio
 <!-- End LinkedIn Thing -->
 
 </body>
+
+
+
+
 
 <!-- Google Tag Manager Dallin (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W5MJMPR"
