--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@ about the user's computer and relevant to their location, as well as interacting
 folders on the computer. Lila can also use APIs and the internet to perform searches, answer 
 questions, and interact with google apps. 
                         </p>
+			<a href="https://dallinstewart.com/blog/assistant.html">Learn More</a> | 
                         <a href="https://github.com/binDebug3/VirtualAssistant">View Code</a>
                     </div>
                     <!-- End .project-info -->
