update ericsson experience

--- a/index.html
+++ b/index.html
@@ -150,7 +150,10 @@ ACME is a unique and intensive intersection of advanced mathematics,
                 <h3>Ericsson</h3>
                 <h4>Industry 4.0 Intern</h4>
                 <p>
-Ericsson is one of the leading providers of Information and Communication Technology (ICT), developing technology and services that are easy to use, adopt, and scale. I am excited to contribute to Ericsson at their new Smart Factory in Dallas, Texas in June
+Promoted communication with an Agile project request form in Python using rest API and custom UI
+Ensured product compliance by automating country code correction with a fuzzy matching Python algorithm
+Simplified product intake and reduced waste by collaboratively building the API backend for an Ignition app
+
                 </p>
             </div>
 
