--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@ ACME is a unique and intensive intersection of advanced mathematics,
                 <h3>Ericsson</h3>
                 <h4>Industry 4.0 Intern</h4>
                 <p>
-Promoted communication with an Agile project request form in Python using rest API and custom UI
-Ensured product compliance by automating country code correction with a fuzzy matching Python algorithm
-Simplified product intake and reduced waste by collaboratively building the API backend for an Ignition app
+Promoted communication with an Agile project request form in Python using rest API and custom UI. 
+Ensured product compliance by automating country code correction with a fuzzy matching Python algorithm. 
+Simplified product intake and reduced waste by collaboratively building the API backend for an Ignition app.
 
                 </p>
             </div>
@@ -161,7 +161,8 @@ Simplified product intake and reduced waste by collaboratively building the API 
                 <h3>BYU Math Department</h3>
                 <h4>Research Assistant</h4>
                 <p>
-I constructed and applied prior distributions for landslide parameters with bayesian statistics and Gaussian Mixture modeling to determine the source of the 1860 Indonesia tsunami with limited and uncertain data
+Constructed prior distributions for landslide parameters with bayesian statistics and Gaussian Mixture modeling
+in Python to determine the source of the 1860 Indonesia tsunami with limited and uncertain data.
                 </p>
             </div>
 
@@ -169,9 +170,9 @@ I constructed and applied prior distributions for landslide parameters with baye
                 <h3>Wells Fargo</h3>
                 <h4>Intern Analyst</h4>
                 <p>
-Analyzed several algorithms to optimize entity-matching for financed emission calculation</br>
-Improved the tactical approach of the Climate Initiative Analytics team with a matching algorithm</br>
-Taught and presented on entity matching to the data analytics community at Wells Fargo
+Optimized speed and accuracy by 20% for emission calculation with entity-matching algorithm analysis. 
+Improved the tactical approach of the Climate Initiative Analytics team with a Python Levenshtein algorithm. 
+Presented and coached name-matching techniques dozens of data analytics and business professionals.
                 </p>
             </div>
 
