--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div id="lead">
         <div id="lead-content">
             <h1>Dallin Stewart</h1>
-            <h2>Applied and Computational Math Undergraduate</h2>
+            <h2>Computer Science and Applied Math Graduate Student</h2>
             <a href="images/resume.pdf" target="_blank" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -111,7 +111,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
                 <div class="col-md-8">
                     <p>
-I am a senior in the Applied and Computational Math Emphasis (ACME) at Brigham Young University. I love to use computer science and math to understand the world around me, make predictions, and solve problems. In my free time I enjoy playing ultimate frisbee and all kinds of board games. </br></br>
+I am a master's student in computer science at the Georgia Institute of Technology and a graduate from the Applied and Computational Math Emphasis (ACME) at Brigham Young University. I love to use computer science and math to understand the world around me, make predictions, and solve problems. In my free time I enjoy playing spikeball, ultimate frisbee, and all kinds of games. </br></br>
 
 I started my college education as an electrical engineer. 
             While I enjoyed my classes, I started to learn more about the possibilities
@@ -146,6 +146,15 @@ ACME is a unique and intensive intersection of advanced mathematics,
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
 
+            <div data-date="July 2024 – Present">
+                <h3>Union Capital Partners</h3>
+                <h4>Quantitative Researcher</h4>
+                <p>
+Built AI/ML models (Random Forest, XGBoost, LSTM) to predict market trends and automate stock trading.
+Developed APIs to enable real-time data collection, feature engineering, and trading bots with visual insights.
+                </p>
+            </div>
+
             <div data-date="June 2023 – August 2023">
                 <h3>Ericsson</h3>
                 <h4>Industry 4.0 Intern</h4>
@@ -163,6 +172,15 @@ Simplified product intake and reduced waste by collaboratively building the API 
                 <p>
 Constructed prior distributions for landslide parameters with bayesian statistics and Gaussian Mixture modeling
 in Python to determine the source of the 1860 Indonesia tsunami with limited and uncertain data.
+                </p>
+            </div>
+
+            <div data-date="August 2022 – April 2024">
+                <h3>BYU Formula E Racing</h3>
+                <h4>Research Assistant</h4>
+                <p>
+Led software development for the ECU and sensor array in BYU's electric race car to compete in the annual itercollegiate Formula Electric engineering competition.
+Developed a C++ OOP architecture, managed GitHub and Jira, and visualized data with Plotly to improve engineering designs.
                 </p>
             </div>
 
@@ -224,6 +242,17 @@ I was also in charge of evacuating over one hundred volunteers from Mexico in tw
 
     <div id="education">
         <h2 class="heading">Education</h2>
+
+        <div class="education-block">
+            <h3>Georgia Institute of Technology</h3>
+            <span class="education-date">August 2024 - August 2026</span>
+            <h4>Masters of Science in Computer Science</h4>
+	    <p>
+I am studying computer science with a specialization in Interactive Intelligence. So far, I have taken classes on artificial intelligence (AI) and AI for robotics.</br></br>
+	    </p>
+        </div>
+        <!-- End .education-block -->
+
         <div class="education-block">
             <h3>Brigham Young University</h3>
             <span class="education-date">August 2018 - April 2024</span>
@@ -331,7 +360,7 @@ When users login, the client app retrieves the user’s family history data from
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Car Data Web Scraper</h3>
+                        <h3>Automatic Car Shopping</h3>
                         <p>
 This project, affectionately named Casper, is a python program that uses selenium to gather used car sales data online from local retailers including AutoTrader, CarsDirect, CarGuru, Carvana, Lowbook, and KSL. As of the most recent update, Casper only searches for cars in the Provo, Utah area. After 
 gathering data, Casper scores each car on how good of a deal the sale is and generates a CSV report of the current market in addition to the market history since November 2022 when I first began the project.
@@ -419,6 +448,31 @@ Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relatio
                         <a href="https://github.com/binDebug3/Datalog-Compiler">View Code</a>
                     </div>
                     <!-- End .project-info -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/github-cover.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Additional Projects</h3>
+                        <p>
+I've worked on lots of awesome projects I am passionate about in addition to those I featured here. If you'd like to see them all, go ahead and click the link below to visit my list of projects on GitHub. Here's a list of highlights in case any catch your eye: 
+    <a href="https://github.com/binDebug3/FoldAndCutNetworks">Novel Deep Learning Layer</a> |
+    <a href="https://github.com/binDebug3/glacme1">AR Subtitles</a> |
+    <a href="https://github.com/binDebug3/EVAdoption">Electric Vehicle Adoption</a> |
+    <a href="https://github.com/binDebug3/CarKalmanFilter">Automatic Road Quality Detection</a> |
+    <a href="https://github.com/binDebug3/ColorCorrection">Color Correcting Images</a> |
+    <a href="https://github.com/binDebug3/https://github.com/binDebug3/minGPT">Mini Chat-GPT</a> |
+    <a href="https://github.com/binDebug3/NYC%20Drive%20Time%20Prediction">NYC Drive Time Prediction</a> |
+    <a href="https://github.com/binDebug3/Cool_Math/blob/main/Machine%20Learning/Speech%20Recognition/speechrecognition.ipynb">Speech Recognition</a> |
+    <a href="https://github.com/binDebug3/Cool_Math/blob/main/Predictive%20Modeling/ObstacleAvoidance/ObstacleAvoidance.ipynb">Obstacle Avoidance</a> |
+    <a href="https://github.com/binDebug3/Cool_Math/tree/main/Optimization/Wordle%20Solver">Wordle Solver</a>
+                        </p>
+                        <a href="https://github.com/binDebug3/tab=repositories">View GitHub</a>
+                    </div>
+                    <!-- End .project-info -->
+
                 </div>
                 <!-- End .project -->
 
@@ -452,6 +506,8 @@ Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relatio
             <li>Selenium</li>
             <li>PyTorch</li>
 	    <li>OpenCV</li>
+	    <li>REST API</li>
+	    <li>Plotly</li>
             <li>Android Programming</li>
             <li>Projection Modeling</li>
             <li>Process Automation</li>
@@ -459,10 +515,14 @@ Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relatio
             <li>Dashboards</li>
             <li>Data Visualization</li>
             <li>Algorithm Optimization</li>
+	    <li>Histogram Filters</li>
             <li>Linear Regression</li>
-	    <li>Graph Theory</li>
+	    <li>A* Search Algorithm</li>
+	    <li>Bayes Nets</li>
+	    <li>Kalman Filters</li>
             <li>Optimization Techniques</li>
             <li>Mathematical Analysis</li>
+	    <li>Particale Filters</li>
             <li>Data Structures</li>
             <li>Discrete Structures</li>
             <li>Dynamic Programming</li>
